--- a/sumo/ex1.sumo.cfg
+++ b/sumo/ex1.sumo.cfg
@@ -2,6 +2,6 @@
     <input>
         <net-file value="ex1.net.xml" />
         <route-files value="ex1.rou.xml" />
-
+        <additional-files value="ex1.add.xml"/>
     </input>
 </configuration>
