--- a/novo_teste/teste.sumo.cfg
+++ b/novo_teste/teste.sumo.cfg
@@ -1,7 +1,6 @@
 <configuration>
     <input>
-        <net-files value="teste.net.xml"/>
+        <net-file value="teste.net.xml"/>
         <route-files value="teste.rou.xml"/>
-        <additional-files value="teste.add.xml"/>
     </input>
 </configuration>
