--- a/sumo/ex1.sumo.cfg
+++ b/sumo/ex1.sumo.cfg
@@ -1,7 +1,13 @@
+<?xml version="1.0" encoding="UTF-8"?>
+
 <configuration>
     <input>
-        <net-file value="ex1.net.xml" />
+        <net-file value="ex1.net.xml"/>
         <route-files value="ex1.rou.xml" />
-        <additional-files value="ex1.add.xml"/>
+        <additional-files value="busStops.add.xml"/>
     </input>
+
+    <output>
+        <tripinfo-output value="tripinfos.xml"/>
+    </output>
 </configuration>
