--- a/novo_teste/teste.sumo.cfg
+++ b/novo_teste/teste.sumo.cfg
@@ -2,5 +2,6 @@
     <input>
         <net-file value="teste.net.xml"/>
         <route-files value="teste.rou.xml"/>
+        <additional-files value="busStop.add.xml"/>
     </input>
 </configuration>
